--- a/_includes/adobe.html
+++ b/_includes/adobe.html
@@ -5,7 +5,7 @@
         var adobeDCView = new AdobeDC.View({ clientId: "84e0076a37614e72863e2e8d86d28c3b", divId: "adobe-dc-view" });
         adobeDCView.previewFile(
             {
-                content: { location: { url: "/media/documents/{{ include.id }}" } },
+                content: { location: { url: "/assets/docs/{{ include.id }}" } },
                 metaData: { fileName: "{{ include.id }}" }
             }, { defaultViewMode: "FIT_PAGE" });
     });
